[project]
name = "claim-decision-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kris tianto", email = "kristianto.mail85@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
